# pysystematictrader

./: .gitignore
pysystematic/: main.py  pyproject.toml
pysystematic/src/data/: yfinance_curves.py
pysystematic/src/engine/: backtester.py  oil.py
pysystematic/src/instruments/: futures.py  options.py
pysystematic/src/marketdata/: feeds.py  yfinance.py
pysystematic/src/quant/: __init__.py
pysystematic/src/quant/forward_curves/: TwoFactor.py  __init__.py
pysystematic/src/quant/models/: BSM.py  SVMR.py  __init__.py  black76.py  vanilla.py
pysystematic/src/quant/volatility/: BreedenLitzenberger.py  SVI.py  __init__.py  intraday_vol.py
pysystematic/src/strategies/: oil_volatility.py
pysystematic/src/utils/: __init__.py  data_objs.py  smoothen.py  utils_breeze.py  utils_kite.py  utils_tickers.py  validate_instrument.py
