[project]
name = "pysystematic"
version = "0.1.0"
description = "Package for running systematic trading book"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "breeze-connect>=1.0.62",
]
# This is the key part for your structure
[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
